updated unit tests

--- a/test/read.cfg
+++ b/test/read.cfg
@@ -1,10 +1,12 @@
-process PROD = {
+process read = {
   source = PoolSource {
     untracked int32 maxEvents = 10
     untracked vstring fileNames = { "file:math.root" }
   }
   
-  module rm = ReadMath { }
+  module rm = ReadMath { 
+    InputTag src = wm
+  }
   
   path p = { rm }
 }
